...
    let onUpdateExerciseName: (UUID, String) -> Void
    let onUpdateSetWeight: (UUID, UUID, String) -> Void
    let onUpdateSetReps: (UUID, UUID, String) -> Void

    var body: some View {
        VStack(alignment: .leading, spacing: 24) {
            Text(String(localized: "Confirm Exercise"))
                .font(.scribbleHeadlineSmall)
                .fontWeight(.bold)
                .foregroundStyle(Color.scribblePrimary)

            ScrollView {
                if scribble.exercises.isEmpty {
...
